# liblock

./: Makefile.am  README.md  build.sh  configure.ac
debian/: changelog  control  postinst.ex  postrm.ex  preinst.ex  prerm.ex
